--- a/Giacomo-Stoffa.css
+++ b/Giacomo-Stoffa.css
@@ -567,6 +567,40 @@
   padding: 8px 15px 9px 14px;
 }
 
+.u-section-3 .u-container-layout-5 {
+  padding: 30px 65px;
+}
+
+.u-section-3 .u-image-5 {
+  width: 59px;
+  height: 59px;
+  background-image: url("images/logo_small_icon_only.png");
+  background-position: 50% 50%;
+  margin: 15px auto 0;
+}
+
+.u-section-3 .u-text-10 {
+  font-size: 1.25rem;
+  margin: 104px 0 0 30px;
+}
+
+.u-section-3 .u-text-11 {
+  font-weight: 700;
+  margin: 86px auto 0;
+}
+
+.u-section-3 .u-btn-6 {
+  background-image: linear-gradient(to right, #478ac9, #2cccc4);
+  border-style: none;
+  font-weight: 700;
+  text-transform: uppercase;
+  font-size: 1.07143rem;
+  letter-spacing: 1px;
+  box-shadow: 0px 2px 6px 0 rgba(0,0,0,0.25);
+  margin: 51px auto 0;
+  padding: 8px 24px 9px 22px;
+}
+
 .u-section-3 .u-carousel-control-1 {
   width: 43px;
   height: 43px;
@@ -596,6 +630,10 @@
   }
 
   .u-section-3 .u-btn-2 {
+    margin-left: 0;
+  }
+
+  .u-section-3 .u-text-10 {
     margin-left: 0;
   }
 }
@@ -691,6 +729,29 @@
     padding-left: 60px;
     padding-right: 60px;
   }
+
+  .u-section-3 .u-container-layout-5 {
+    padding: 0 60px;
+  }
+
+  .u-section-3 .u-image-5 {
+    margin-top: 45px;
+  }
+
+  .u-section-3 .u-text-10 {
+    width: auto;
+    margin-top: 59px;
+  }
+
+  .u-section-3 .u-text-11 {
+    width: auto;
+    margin-top: 59px;
+  }
+
+  .u-section-3 .u-btn-6 {
+    margin-top: 43px;
+    margin-right: 13px;
+  }
 }
 
 @media (max-width: 575px) {
@@ -778,6 +839,19 @@
   .u-section-3 .u-text-9 {
     width: auto;
     margin-top: 79px;
+  }
+
+  .u-section-3 .u-container-layout-5 {
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+
+  .u-section-3 .u-text-10 {
+    font-size: 1.125rem;
+  }
+
+  .u-section-3 .u-btn-6 {
+    margin-right: auto;
   }
 }.u-section-4 {
   background-image: linear-gradient(0deg, rgba(0,0,0,0.6), rgba(0,0,0,0.6)), url("images/w4-min.jpg");
