--- a/Giacomo-Stoffa.css
+++ b/Giacomo-Stoffa.css
@@ -416,7 +416,7 @@
 .u-section-3 .u-image-1 {
   width: 59px;
   height: 59px;
-  background-image: url("images/logo_small_icon_only.png");
+  background-image: url("images/logo_small_icon_only.png?rand=53ee");
   background-position: 50% 50%;
   margin: 15px auto 0;
 }
@@ -462,7 +462,7 @@
 .u-section-3 .u-image-2 {
   width: 59px;
   height: 59px;
-  background-image: url("images/logo_small_icon_only.png");
+  background-image: url("images/logo_small_icon_only.png?rand=53ee");
   background-position: 50% 50%;
   margin: 15px auto 0;
 }
@@ -501,7 +501,7 @@
 .u-section-3 .u-image-3 {
   width: 59px;
   height: 59px;
-  background-image: url("images/logo_small_icon_only.png");
+  background-image: url("images/logo_small_icon_only.png?rand=53ee");
   background-position: 50% 50%;
   margin: 15px auto 0;
 }
@@ -540,7 +540,7 @@
 .u-section-3 .u-image-4 {
   width: 59px;
   height: 59px;
-  background-image: url("images/logo_small_icon_only.png");
+  background-image: url("images/logo_small_icon_only.png?rand=53ee");
   background-position: 50% 50%;
   margin: 15px auto 0;
 }
@@ -574,7 +574,7 @@
 .u-section-3 .u-image-5 {
   width: 59px;
   height: 59px;
-  background-image: url("images/logo_small_icon_only.png");
+  background-image: url("images/logo_small_icon_only.png?rand=53ee");
   background-position: 50% 50%;
   margin: 15px auto 0;
 }
@@ -590,6 +590,108 @@
 }
 
 .u-section-3 .u-btn-6 {
+  background-image: linear-gradient(to right, #478ac9, #2cccc4);
+  border-style: none;
+  font-weight: 700;
+  text-transform: uppercase;
+  font-size: 1.07143rem;
+  letter-spacing: 1px;
+  box-shadow: 0px 2px 6px 0 rgba(0,0,0,0.25);
+  margin: 51px auto 0;
+  padding: 8px 24px 9px 22px;
+}
+
+.u-section-3 .u-container-layout-6 {
+  padding: 30px 65px;
+}
+
+.u-section-3 .u-image-6 {
+  width: 59px;
+  height: 59px;
+  background-image: url("images/logo_small_icon_only.png?rand=53ee");
+  background-position: 50% 50%;
+  margin: 15px auto 0;
+}
+
+.u-section-3 .u-text-12 {
+  font-size: 1.25rem;
+  margin: 104px 0 0 30px;
+}
+
+.u-section-3 .u-text-13 {
+  font-weight: 700;
+  margin: 86px auto 0;
+}
+
+.u-section-3 .u-btn-7 {
+  background-image: linear-gradient(to right, #478ac9, #2cccc4);
+  border-style: none;
+  font-weight: 700;
+  text-transform: uppercase;
+  font-size: 1.07143rem;
+  letter-spacing: 1px;
+  box-shadow: 0px 2px 6px 0 rgba(0,0,0,0.25);
+  margin: 25px auto 0 294px;
+  padding: 8px 24px 9px 22px;
+}
+
+.u-section-3 .u-container-layout-7 {
+  padding: 30px 65px;
+}
+
+.u-section-3 .u-image-7 {
+  width: 59px;
+  height: 59px;
+  background-image: url("images/logo_small_icon_only.png?rand=53ee");
+  background-position: 50% 50%;
+  margin: 15px auto 0;
+}
+
+.u-section-3 .u-text-14 {
+  font-size: 1.25rem;
+  margin: 104px 0 0 30px;
+}
+
+.u-section-3 .u-text-15 {
+  font-weight: 700;
+  margin: 86px auto 0;
+}
+
+.u-section-3 .u-btn-8 {
+  background-image: linear-gradient(to right, #478ac9, #2cccc4);
+  border-style: none;
+  font-weight: 700;
+  text-transform: uppercase;
+  font-size: 1.07143rem;
+  letter-spacing: 1px;
+  box-shadow: 0px 2px 6px 0 rgba(0,0,0,0.25);
+  margin: 51px auto 0;
+  padding: 8px 24px 9px 22px;
+}
+
+.u-section-3 .u-container-layout-8 {
+  padding: 30px 65px;
+}
+
+.u-section-3 .u-image-8 {
+  width: 59px;
+  height: 59px;
+  background-image: url("images/logo_small_icon_only.png?rand=53ee");
+  background-position: 50% 50%;
+  margin: 15px auto 0;
+}
+
+.u-section-3 .u-text-16 {
+  font-size: 1.25rem;
+  margin: 104px 0 0 30px;
+}
+
+.u-section-3 .u-text-17 {
+  font-weight: 700;
+  margin: 86px auto 0;
+}
+
+.u-section-3 .u-btn-9 {
   background-image: linear-gradient(to right, #478ac9, #2cccc4);
   border-style: none;
   font-weight: 700;
@@ -636,6 +738,22 @@
   .u-section-3 .u-text-10 {
     margin-left: 0;
   }
+
+  .u-section-3 .u-text-12 {
+    margin-left: 0;
+  }
+
+  .u-section-3 .u-btn-7 {
+    margin-left: 94px;
+  }
+
+  .u-section-3 .u-text-14 {
+    margin-left: 0;
+  }
+
+  .u-section-3 .u-text-16 {
+    margin-left: 0;
+  }
 }
 
 @media (max-width: 991px) {
@@ -656,6 +774,10 @@
   .u-section-3 .u-container-layout-4 {
     padding-left: 65px;
     padding-right: 65px;
+  }
+
+  .u-section-3 .u-btn-7 {
+    margin-left: 0;
   }
 }
 
@@ -749,6 +871,75 @@
   }
 
   .u-section-3 .u-btn-6 {
+    margin-top: 43px;
+    margin-right: 13px;
+  }
+
+  .u-section-3 .u-container-layout-6 {
+    padding: 0 60px;
+  }
+
+  .u-section-3 .u-image-6 {
+    margin-top: 45px;
+  }
+
+  .u-section-3 .u-text-12 {
+    width: auto;
+    margin-top: 59px;
+  }
+
+  .u-section-3 .u-text-13 {
+    width: auto;
+    margin-top: 59px;
+  }
+
+  .u-section-3 .u-btn-7 {
+    margin-top: 43px;
+    margin-right: 13px;
+  }
+
+  .u-section-3 .u-container-layout-7 {
+    padding: 0 60px;
+  }
+
+  .u-section-3 .u-image-7 {
+    margin-top: 45px;
+  }
+
+  .u-section-3 .u-text-14 {
+    width: auto;
+    margin-top: 59px;
+  }
+
+  .u-section-3 .u-text-15 {
+    width: auto;
+    margin-top: 59px;
+  }
+
+  .u-section-3 .u-btn-8 {
+    margin-top: 43px;
+    margin-right: 13px;
+  }
+
+  .u-section-3 .u-container-layout-8 {
+    padding: 0 60px;
+  }
+
+  .u-section-3 .u-image-8 {
+    margin-top: 45px;
+  }
+
+  .u-section-3 .u-text-16 {
+    width: auto;
+    margin-top: 59px;
+  }
+
+  .u-section-3 .u-text-17 {
+    width: auto;
+    margin-top: 59px;
+  }
+
+  .u-section-3 .u-btn-9 {
     margin-top: 43px;
     margin-right: 13px;
   }
@@ -851,6 +1042,45 @@
   }
 
   .u-section-3 .u-btn-6 {
+    margin-right: auto;
+  }
+
+  .u-section-3 .u-container-layout-6 {
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+
+  .u-section-3 .u-text-12 {
+    font-size: 1.125rem;
+  }
+
+  .u-section-3 .u-btn-7 {
+    margin-right: auto;
+  }
+
+  .u-section-3 .u-container-layout-7 {
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+
+  .u-section-3 .u-text-14 {
+    font-size: 1.125rem;
+  }
+
+  .u-section-3 .u-btn-8 {
+    margin-right: auto;
+  }
+
+  .u-section-3 .u-container-layout-8 {
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+
+  .u-section-3 .u-text-16 {
+    font-size: 1.125rem;
+  }
+
+  .u-section-3 .u-btn-9 {
     margin-right: auto;
   }
 }.u-section-4 {
