--- a/Giacomo-Stoffa.css
+++ b/Giacomo-Stoffa.css
@@ -12,11 +12,11 @@
 .u-section-1 .u-image-1 {
   width: 270px;
   height: 270px;
-  background-image: url("images/foto-io-2.jpeg");
-  background-position: 50% 50%;
+  background-image: url("images/foto_mia2.jpg");
+  background-position: 50% 20.85%;
   animation-duration: 1000ms;
   box-shadow: 0 2px 8px 0 rgba(128,128,128,1);
-  margin: -251px auto 0;
+  margin: -234px calc(((100% - 1140px) / 2) + 424px) 0 auto;
 }
 
 .u-section-1 .u-text-1 {
@@ -25,7 +25,7 @@
   letter-spacing: 4px;
   width: 554px;
   font-size: 2.25rem;
-  margin: 61px auto 0;
+  margin: 44px auto 0;
 }
 
 .u-section-1 .u-text-2 {
@@ -52,6 +52,7 @@
 
   .u-section-1 .u-image-1 {
     margin-top: -216px;
+    margin-right: calc(((100% - 940px) / 2) + 424px);
   }
 
   .u-section-1 .u-text-1 {
@@ -69,10 +70,17 @@
   }
 }
 
+@media (max-width: 991px) {
+  .u-section-1 .u-image-1 {
+    margin-right: calc(((100% - 720px) / 2) + 424px);
+  }
+}
+
 @media (max-width: 767px) {
   .u-section-1 .u-image-1 {
     width: 200px;
     height: 200px;
+    margin-right: calc(((100% - 540px) / 2) + 270px);
   }
 
   .u-section-1 .u-text-1 {
@@ -102,6 +110,7 @@
 
   .u-section-1 .u-image-1 {
     margin-top: -180px;
+    margin-right: calc(((100% - 340px) / 2) + 70px);
   }
 
   .u-section-1 .u-text-1 {
@@ -387,7 +396,7 @@
 }
 
 .u-section-3 .u-sheet-1 {
-  min-height: 787px;
+  min-height: 839px;
 }
 
 .u-section-3 .u-text-1 {
@@ -399,7 +408,7 @@
 .u-section-3 .u-slider-1 {
   min-height: 581px;
   width: 868px;
-  margin: 51px auto 59px;
+  margin: 51px auto 60px;
 }
 
 .u-section-3 .u-carousel-indicators-1 {
@@ -719,10 +728,6 @@
 }
 
 @media (max-width: 1199px) {
-  .u-section-3 .u-slider-1 {
-    height: auto;
-  }
-
   .u-section-3 .u-text-2 {
     margin-left: 0;
   }
@@ -782,19 +787,7 @@
 }
 
 @media (max-width: 767px) {
-  .u-section-3 .u-sheet-1 {
-    min-height: 786px;
-  }
-
-  .u-section-3 .u-text-1 {
-    width: auto;
-    margin-top: 25px;
-    margin-right: 252px;
-  }
-
   .u-section-3 .u-slider-1 {
-    min-height: 542px;
-    margin-bottom: 60px;
     margin-right: initial;
     margin-left: initial;
     width: auto;
@@ -946,23 +939,14 @@
 }
 
 @media (max-width: 575px) {
-  .u-section-3 .u-sheet-1 {
-    min-height: 788px;
-  }
-
   .u-section-3 .u-text-1 {
     font-size: 1.85714rem;
-    margin-top: 47px;
-    margin-right: 138px;
-    margin-left: -86px;
   }
 
   .u-section-3 .u-slider-1 {
-    min-height: 566px;
-    width: 374px;
-    margin-top: 29px;
-    margin-left: -17px;
-    margin-right: -17px;
+    width: 340px;
+    margin-left: auto;
+    margin-right: auto;
   }
 
   .u-section-3 .u-container-layout-1 {
@@ -1083,120 +1067,211 @@
   .u-section-3 .u-btn-9 {
     margin-right: auto;
   }
-}.u-section-4 {
+}.u-section-4 .u-sheet-1 {
+  min-height: 457px;
+}
+
+.u-section-4 .u-blog-1 {
+  margin-top: 0;
+  margin-bottom: 60px;
+}
+
+.u-section-4 .u-repeater-1 {
+  grid-template-columns: 100%;
+  grid-gap: 22px 22px;
+  min-height: 335px;
+}
+
+.u-section-4 .u-container-layout-1 {
+  padding: 0 28px;
+}
+
+.u-section-4 .u-image-1 {
+  height: 304px;
+  width: 386px;
+  margin: 12px auto 0 1px;
+}
+
+.u-section-4 .u-text-1 {
+  font-size: 3rem;
+  text-shadow: 0 2px 8px rgba(128,128,128,1);
+  margin: -315px 231px 0 auto;
+}
+
+.u-section-4 .u-image-2 {
+  width: 207px;
+  height: 207px;
+  margin: 39px 391px 0 auto;
+}
+
+.u-section-4 .u-social-icons-1 {
+  height: 43px;
+  min-height: 16px;
+  width: 43px;
+  min-width: 16px;
+  margin: -19px 308px 0 auto;
+}
+
+@media (max-width: 1199px) {
+  .u-section-4 .u-image-1 {
+    height: 303px;
+  }
+
+  .u-section-4 .u-social-icons-1 {
+    margin-right: 256px;
+  }
+}
+
+@media (max-width: 991px) {
+  .u-section-4 .u-text-1 {
+    margin-right: 174px;
+  }
+}
+
+@media (max-width: 767px) {
+  .u-section-4 .u-container-layout-1 {
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+
+  .u-section-4 .u-text-1 {
+    margin-right: 30px;
+  }
+
+  .u-section-4 .u-image-2 {
+    margin-right: 313px;
+  }
+}
+
+@media (max-width: 575px) {
+  .u-section-4 .u-image-1 {
+    height: 251px;
+    width: 320px;
+    margin-left: 0;
+  }
+
+  .u-section-4 .u-text-1 {
+    font-size: 1.5rem;
+    margin-top: -263px;
+    margin-right: 0;
+  }
+
+  .u-section-4 .u-image-2 {
+    margin-right: 113px;
+  }
+}.u-section-5 {
   background-image: linear-gradient(0deg, rgba(0,0,0,0.6), rgba(0,0,0,0.6)), url("images/w4-min.jpg");
   background-position: 50% 50%;
 }
 
-.u-section-4 .u-sheet-1 {
-  min-height: 404px;
+.u-section-5 .u-sheet-1 {
+  min-height: 476px;
 }
 
-.u-section-4 .u-text-1 {
+.u-section-5 .u-text-1 {
   font-size: 1.25rem;
   width: 670px;
   margin: 116px auto 0;
 }
 
-.u-section-4 .u-image-1 {
+.u-section-5 .u-image-1 {
   width: 78px;
   height: 78px;
   margin: 104px auto 0 399px;
 }
 
-.u-section-4 .u-image-2 {
+.u-section-5 .u-image-2 {
   width: 78px;
   height: 78px;
   margin: -78px auto 0;
 }
 
-.u-section-4 .u-image-3 {
+.u-section-5 .u-image-3 {
   width: 101px;
   height: 66px;
-  margin: -66px 365px 51px auto;
+  margin: -66px 365px 60px auto;
 }
 
 @media (max-width: 1199px) {
-  .u-section-4 .u-sheet-1 {
+  .u-section-5 .u-sheet-1 {
     min-height: 397px;
   }
 
-  .u-section-4 .u-image-1 {
+  .u-section-5 .u-image-1 {
     width: 65px;
     height: 65px;
     margin-top: 86px;
     margin-left: 274px;
   }
 
-  .u-section-4 .u-image-2 {
+  .u-section-5 .u-image-2 {
     width: 65px;
     height: 65px;
     margin-top: -65px;
     margin-left: 431px;
   }
 
-  .u-section-4 .u-image-3 {
+  .u-section-5 .u-image-3 {
     width: 81px;
     height: 53px;
     margin-top: -59px;
     margin-right: 271px;
-    margin-bottom: 60px;
   }
 }
 
 @media (max-width: 991px) {
-  .u-section-4 .u-sheet-1 {
+  .u-section-5 .u-sheet-1 {
     min-height: 362px;
   }
 
-  .u-section-4 .u-text-1 {
+  .u-section-5 .u-text-1 {
     width: auto;
     margin-top: 80px;
     margin-left: 25px;
     margin-right: 25px;
   }
 
-  .u-section-4 .u-image-1 {
+  .u-section-5 .u-image-1 {
     margin-top: 90px;
     margin-left: 176px;
   }
 
-  .u-section-4 .u-image-2 {
+  .u-section-5 .u-image-2 {
     margin-right: 318px;
     margin-left: auto;
   }
 
-  .u-section-4 .u-image-3 {
+  .u-section-5 .u-image-3 {
     margin-right: 166px;
   }
 }
 
 @media (max-width: 767px) {
-  .u-section-4 .u-sheet-1 {
+  .u-section-5 .u-sheet-1 {
     min-height: 329px;
   }
 
-  .u-section-4 .u-text-1 {
+  .u-section-5 .u-text-1 {
     margin-top: 65px;
     margin-left: 0;
     margin-right: 0;
   }
 
-  .u-section-4 .u-image-1 {
+  .u-section-5 .u-image-1 {
     width: 75px;
     height: 67px;
     margin-top: 74px;
     margin-left: auto;
   }
 
-  .u-section-4 .u-image-2 {
+  .u-section-5 .u-image-2 {
     width: 64px;
     height: 67px;
     margin-top: -67px;
     margin-left: 103px;
   }
 
-  .u-section-4 .u-image-3 {
+  .u-section-5 .u-image-3 {
     width: 87px;
     height: 57px;
     margin-top: -62px;
@@ -1205,22 +1280,22 @@
 }
 
 @media (max-width: 575px) {
-  .u-section-4 .u-sheet-1 {
+  .u-section-5 .u-sheet-1 {
     min-height: 346px;
   }
 
-  .u-section-4 .u-text-1 {
+  .u-section-5 .u-text-1 {
     margin-top: 52px;
   }
 
-  .u-section-4 .u-image-1 {
+  .u-section-5 .u-image-1 {
     width: 66px;
     height: 51px;
     margin-top: 100px;
     margin-left: 58px;
   }
 
-  .u-section-4 .u-image-2 {
+  .u-section-5 .u-image-2 {
     width: 51px;
     height: 52px;
     margin-top: -51px;
@@ -1228,7 +1303,7 @@
     margin-right: auto;
   }
 
-  .u-section-4 .u-image-3 {
+  .u-section-5 .u-image-3 {
     width: 61px;
     height: 40px;
     margin-top: -46px;
