--- a/Giacomo-Stoffa.css
+++ b/Giacomo-Stoffa.css
@@ -10,13 +10,13 @@
 }
 
 .u-section-1 .u-image-1 {
-  width: 270px;
-  height: 270px;
+  width: 247px;
+  height: 247px;
   background-image: url("images/foto_mia2.jpg");
   background-position: 50% 20.85%;
   animation-duration: 1000ms;
   box-shadow: 0 2px 8px 0 rgba(128,128,128,1);
-  margin: -234px calc(((100% - 1140px) / 2) + 424px) 0 auto;
+  margin: -206px auto 0;
 }
 
 .u-section-1 .u-text-1 {
@@ -25,7 +25,7 @@
   letter-spacing: 4px;
   width: 554px;
   font-size: 2.25rem;
-  margin: 44px auto 0;
+  margin: 39px auto 0;
 }
 
 .u-section-1 .u-text-2 {
@@ -51,12 +51,14 @@
   }
 
   .u-section-1 .u-image-1 {
-    margin-top: -216px;
-    margin-right: calc(((100% - 940px) / 2) + 424px);
+    width: 238px;
+    height: 238px;
+    margin-top: -191px;
+    margin-right: calc(((100% - 940px) / 2) + 333px);
   }
 
   .u-section-1 .u-text-1 {
-    margin-top: 103px;
+    margin-top: 110px;
   }
 
   .u-section-1 .u-text-2 {
@@ -72,7 +74,14 @@
 
 @media (max-width: 991px) {
   .u-section-1 .u-image-1 {
-    margin-right: calc(((100% - 720px) / 2) + 424px);
+    width: 191px;
+    height: 191px;
+    margin-top: -156px;
+    margin-right: auto;
+  }
+
+  .u-section-1 .u-text-1 {
+    margin-top: 122px;
   }
 }
 
@@ -80,7 +89,6 @@
   .u-section-1 .u-image-1 {
     width: 200px;
     height: 200px;
-    margin-right: calc(((100% - 540px) / 2) + 270px);
   }
 
   .u-section-1 .u-text-1 {
@@ -109,13 +117,14 @@
   }
 
   .u-section-1 .u-image-1 {
-    margin-top: -180px;
-    margin-right: calc(((100% - 340px) / 2) + 70px);
+    width: 162px;
+    height: 162px;
+    margin-top: -121px;
   }
 
   .u-section-1 .u-text-1 {
     font-size: 1.28571rem;
-    margin-top: 73px;
+    margin-top: 52px;
     margin-left: 0;
     margin-right: 0;
   }
@@ -255,7 +264,7 @@
   }
 
   .u-section-2 .u-layout-cell-1 {
-    min-height: 617px;
+    min-height: 786px;
   }
 
   .u-section-2 .u-text-1 {
@@ -263,7 +272,10 @@
   }
 
   .u-section-2 .u-image-1 {
-    margin-top: 35px;
+    height: 245px;
+    width: 245px;
+    margin-top: 47px;
+    margin-left: auto;
   }
 
   .u-section-2 .u-layout-cell-2 {
@@ -287,11 +299,16 @@
 
 @media (max-width: 767px) {
   .u-section-2 {
-    min-height: 270px;
+    min-height: 1014px;
+  }
+
+  .u-section-2 .u-shape-1 {
+    margin-top: 1px;
   }
 
   .u-section-2 .u-layout-wrap-1 {
     width: 540px;
+    margin-bottom: 1px;
   }
 
   .u-section-2 .u-layout-cell-1 {
@@ -342,15 +359,17 @@
 
   .u-section-2 .u-shape-1 {
     height: 461px;
+    margin-top: 66px;
   }
 
   .u-section-2 .u-layout-wrap-1 {
-    width: 340px;
-    margin-top: -401px;
+    width: 367px;
+    margin-right: calc(((100% - 340px) / 2) + -27px);
+    margin-bottom: 55px;
   }
 
   .u-section-2 .u-layout-cell-1 {
-    min-height: 332px;
+    min-height: 337px;
   }
 
   .u-section-2 .u-container-layout-1 {
@@ -361,17 +380,19 @@
   .u-section-2 .u-text-1 {
     font-size: 2.25rem;
     width: auto;
+    margin-top: 15px;
   }
 
   .u-section-2 .u-image-1 {
-    height: 152px;
-    width: 152px;
-    margin-top: 26px;
-    margin-left: 11px;
+    height: 133px;
+    width: 133px;
+    margin-top: 46px;
+    margin-right: 192px;
+    margin-left: 15px;
   }
 
   .u-section-2 .u-layout-cell-2 {
-    min-height: 410px;
+    min-height: 418px;
   }
 
   .u-section-2 .u-image-2 {
@@ -382,14 +403,14 @@
   }
 
   .u-section-2 .u-btn-1 {
-    margin-top: 118px;
+    margin-top: 117px;
     margin-right: auto;
-    padding-right: 32px;
-    padding-left: 30px;
+    padding: 6px 18px 7px;
   }
 
   .u-section-2 .u-text-2 {
-    margin-top: 102px;
+    margin-top: 153px;
+    margin-bottom: 0;
   }
 }.u-section-3 {
   background-image: none;
@@ -425,7 +446,7 @@
 .u-section-3 .u-image-1 {
   width: 59px;
   height: 59px;
-  background-image: url("images/logo_small_icon_only.png");
+  background-image: url("images/logo_small_icon_only.png?rand=53ee");
   background-position: 50% 50%;
   margin: 15px auto 0;
 }
@@ -471,7 +492,7 @@
 .u-section-3 .u-image-2 {
   width: 59px;
   height: 59px;
-  background-image: url("images/logo_small_icon_only.png");
+  background-image: url("images/logo_small_icon_only.png?rand=53ee");
   background-position: 50% 50%;
   margin: 15px auto 0;
 }
@@ -510,7 +531,7 @@
 .u-section-3 .u-image-3 {
   width: 59px;
   height: 59px;
-  background-image: url("images/logo_small_icon_only.png");
+  background-image: url("images/logo_small_icon_only.png?rand=53ee");
   background-position: 50% 50%;
   margin: 15px auto 0;
 }
@@ -549,7 +570,7 @@
 .u-section-3 .u-image-4 {
   width: 59px;
   height: 59px;
-  background-image: url("images/logo_small_icon_only.png");
+  background-image: url("images/logo_small_icon_only.png?rand=53ee");
   background-position: 50% 50%;
   margin: 15px auto 0;
 }
@@ -583,7 +604,7 @@
 .u-section-3 .u-image-5 {
   width: 59px;
   height: 59px;
-  background-image: url("images/logo_small_icon_only.png");
+  background-image: url("images/logo_small_icon_only.png?rand=53ee");
   background-position: 50% 50%;
   margin: 15px auto 0;
 }
@@ -617,7 +638,7 @@
 .u-section-3 .u-image-6 {
   width: 59px;
   height: 59px;
-  background-image: url("images/logo_small_icon_only.png");
+  background-image: url("images/logo_small_icon_only.png?rand=53ee");
   background-position: 50% 50%;
   margin: 15px auto 0;
 }
@@ -651,7 +672,7 @@
 .u-section-3 .u-image-7 {
   width: 59px;
   height: 59px;
-  background-image: url("images/logo_small_icon_only.png");
+  background-image: url("images/logo_small_icon_only.png?rand=53ee");
   background-position: 50% 50%;
   margin: 15px auto 0;
 }
@@ -685,7 +706,7 @@
 .u-section-3 .u-image-8 {
   width: 59px;
   height: 59px;
-  background-image: url("images/logo_small_icon_only.png");
+  background-image: url("images/logo_small_icon_only.png?rand=53ee");
   background-position: 50% 50%;
   margin: 15px auto 0;
 }
@@ -787,7 +808,14 @@
 }
 
 @media (max-width: 767px) {
+  .u-section-3 .u-text-1 {
+    width: auto;
+    margin-top: 43px;
+    margin-right: 243px;
+  }
+
   .u-section-3 .u-slider-1 {
+    margin-top: 59px;
     margin-right: initial;
     margin-left: initial;
     width: auto;
@@ -941,6 +969,7 @@
 @media (max-width: 575px) {
   .u-section-3 .u-text-1 {
     font-size: 1.85714rem;
+    margin-right: 43px;
   }
 
   .u-section-3 .u-slider-1 {
@@ -1067,11 +1096,7 @@
   .u-section-3 .u-btn-9 {
     margin-right: auto;
   }
-}.u-section-4 .u-sheet-1 {
-  min-height: 457px;
-}
-
-.u-section-4 .u-blog-1 {
+}.u-section-4 .u-blog-1 {
   margin-top: 0;
   margin-bottom: 60px;
 }
@@ -1119,14 +1144,50 @@
     height: 303px;
   }
 
+  .u-section-4 .u-text-1 {
+    width: auto;
+    margin-right: 220px;
+  }
+
+  .u-section-4 .u-image-2 {
+    width: 154px;
+    height: 154px;
+    margin-top: 30px;
+    margin-right: 283px;
+  }
+
   .u-section-4 .u-social-icons-1 {
+    margin-top: 44px;
     margin-right: 256px;
   }
 }
 
 @media (max-width: 991px) {
+  .u-section-4 .u-blog-1 {
+    margin-top: -1px;
+  }
+
+  .u-section-4 .u-image-1 {
+    height: 215px;
+    width: 275px;
+    margin-top: 86px;
+    margin-left: 12px;
+  }
+
   .u-section-4 .u-text-1 {
-    margin-right: 174px;
+    margin-top: -282px;
+    margin-right: auto;
+    margin-left: 20px;
+  }
+
+  .u-section-4 .u-image-2 {
+    margin-top: 51px;
+    margin-right: 178px;
+  }
+
+  .u-section-4 .u-social-icons-1 {
+    margin-top: 12px;
+    margin-right: auto;
   }
 }
 
@@ -1136,30 +1197,58 @@
     padding-right: 10px;
   }
 
+  .u-section-4 .u-image-1 {
+    height: 216px;
+    margin-top: 60px;
+  }
+
   .u-section-4 .u-text-1 {
-    margin-right: 30px;
+    margin-top: -288px;
+    margin-right: 76px;
+    margin-left: auto;
   }
 
   .u-section-4 .u-image-2 {
-    margin-right: 313px;
+    width: 133px;
+    height: 133px;
+    margin-top: 53px;
+    margin-right: 70px;
+  }
+
+  .u-section-4 .u-social-icons-1 {
+    margin-top: 13px;
+    margin-right: 160px;
   }
 }
 
 @media (max-width: 575px) {
+  .u-section-4 .u-container-layout-1 {
+    padding-left: 0;
+    padding-right: 0;
+  }
+
   .u-section-4 .u-image-1 {
-    height: 251px;
-    width: 320px;
+    height: 175px;
+    width: 195px;
     margin-left: 0;
   }
 
   .u-section-4 .u-text-1 {
     font-size: 1.5rem;
-    margin-top: -263px;
-    margin-right: 0;
+    margin-top: -222px;
+    margin-right: 10px;
   }
 
   .u-section-4 .u-image-2 {
-    margin-right: 113px;
+    width: 93px;
+    height: 93px;
+    margin-top: 48px;
+    margin-right: 27px;
+  }
+
+  .u-section-4 .u-social-icons-1 {
+    margin-top: 35px;
+    margin-right: 67px;
   }
 }.u-section-5 {
   background-image: linear-gradient(0deg, rgba(0,0,0,0.6), rgba(0,0,0,0.6)), url("images/w4-min.jpg");
