--- a/nicepage.css
+++ b/nicepage.css
@@ -34793,29 +34793,33 @@ a.u-link.u-text-hover-grey-90:hover {
 
 
 /*end-variables sitestylecss*/
-.u-header {
+.u-header .u-section-row-1 {
   background-image: none;
 }
 
 .u-header .u-sheet-1 {
-  min-height: 80px;
+  min-height: 69px;
 }
 
 .u-header .u-image-1 {
-  width: 119px;
-  height: 64px;
-  margin: 22px auto 26px 0;
+  width: 112px;
+  height: 67px;
+  margin: 1px auto 1px 78px;
 }
-
-.u-header .u-logo-image-1 {
-  width: 100%;
-  height: 100%;
+.u-header .u-sheet-2 {
+  min-height: 100px;
 }
 @media (max-width: 1199px) {
   .u-header .u-image-1 {
-    width: 119px;
+    width: 112px;
+    height: 67px;
+    margin-left: 78px;
   }
 }
+
+
+
+
 
 
 
