--- a/Giacomo-Stoffa.css
+++ b/Giacomo-Stoffa.css
@@ -771,6 +771,91 @@
   padding: 8px 24px 9px 22px;
 }
 
+.u-section-3 .u-carousel-item-10 {
+  margin-top: 0;
+  margin-bottom: 0;
+}
+
+.u-section-3 .u-container-layout-10 {
+  padding: 30px 65px;
+}
+
+.u-section-3 .u-image-10 {
+  width: 59px;
+  height: 59px;
+  background-image: url("images/logo_small_icon_only.png?rand=53ee");
+  background-position: 50% 50%;
+  margin: 15px auto 0;
+}
+
+.u-section-3 .u-text-20 {
+  font-size: 1.25rem;
+  margin: 104px 0 0 30px;
+}
+
+.u-section-3 .u-text-21 {
+  font-weight: 700;
+  margin: 86px auto 0;
+}
+
+.u-section-3 .u-btn-11 {
+  background-image: linear-gradient(to right, #478ac9, #2cccc4);
+  border-style: none;
+  font-weight: 700;
+  text-transform: uppercase;
+  font-size: 1.07143rem;
+  letter-spacing: 1px;
+  box-shadow: 0px 2px 6px 0 rgba(0,0,0,0.25);
+  margin: 51px auto 0;
+  padding: 8px 24px 9px 22px;
+}
+
+.u-section-3 .u-carousel-item-11 {
+  margin-top: 0;
+  margin-bottom: 0;
+}
+
+.u-section-3 .u-container-layout-11 {
+  padding: 30px 65px;
+}
+
+.u-section-3 .u-image-11 {
+  width: 59px;
+  height: 59px;
+  background-image: url("images/logo_small_icon_only.png?rand=53ee");
+  background-position: 50% 50%;
+  margin: 15px auto 0;
+}
+
+.u-section-3 .u-text-22 {
+  font-size: 1.25rem;
+  margin: 56px 0 0 30px;
+}
+
+.u-section-3 .u-text-23 {
+  font-weight: 700;
+  margin: 51px auto 0;
+}
+
+.u-section-3 .u-btn-12 {
+  background-image: linear-gradient(to right, #478ac9, #2cccc4);
+  border-style: none;
+  font-weight: 700;
+  text-transform: uppercase;
+  font-size: 1.07143rem;
+  letter-spacing: 1px;
+  box-shadow: 0px 2px 6px 0 rgba(0,0,0,0.25);
+  margin: 30px auto 0 196px;
+  padding: 8px 24px 9px 22px;
+}
+
+.u-section-3 .u-btn-13 {
+  border-style: none;
+  font-size: 1rem;
+  margin: -41px 176px 0 auto;
+  padding: 8px 35px 9px;
+}
+
 .u-section-3 .u-carousel-control-1 {
   width: 43px;
   height: 43px;
@@ -822,6 +907,22 @@
   .u-section-3 .u-text-18 {
     margin-left: 0;
   }
+
+  .u-section-3 .u-text-20 {
+    margin-left: 0;
+  }
+
+  .u-section-3 .u-text-22 {
+    margin-left: 0;
+  }
+
+  .u-section-3 .u-btn-12 {
+    margin-left: 0;
+  }
+
+  .u-section-3 .u-btn-13 {
+    margin-right: 0;
+  }
 }
 
 @media (max-width: 991px) {
@@ -850,14 +951,7 @@
 }
 
 @media (max-width: 767px) {
-  .u-section-3 .u-text-1 {
-    width: auto;
-    margin-top: 43px;
-    margin-right: 243px;
-  }
-
   .u-section-3 .u-slider-1 {
-    margin-top: 59px;
     margin-right: initial;
     margin-left: initial;
     width: auto;
@@ -934,8 +1028,7 @@
   }
 
   .u-section-3 .u-btn-6 {
-    margin-top: 43px;
-    margin-right: 13px;
+    margin-top: 45px;
   }
 
   .u-section-3 .u-container-layout-6 {
@@ -957,8 +1050,8 @@
   }
 
   .u-section-3 .u-btn-7 {
-    margin-top: 43px;
-    margin-right: 13px;
+    margin-top: 58px;
+    margin-left: auto;
   }
 
   .u-section-3 .u-container-layout-7 {
@@ -980,8 +1073,7 @@
   }
 
   .u-section-3 .u-btn-8 {
-    margin-top: 43px;
-    margin-right: 13px;
+    margin-top: 45px;
   }
 
   .u-section-3 .u-container-layout-8 {
@@ -1003,8 +1095,7 @@
   }
 
   .u-section-3 .u-btn-9 {
-    margin-top: 43px;
-    margin-right: 13px;
+    margin-top: 45px;
   }
 
   .u-section-3 .u-container-layout-9 {
@@ -1025,16 +1116,54 @@
     margin-top: 59px;
   }
 
-  .u-section-3 .u-btn-10 {
-    margin-top: 43px;
-    margin-right: 13px;
+  .u-section-3 .u-container-layout-10 {
+    padding: 0 60px;
+  }
+
+  .u-section-3 .u-image-10 {
+    margin-top: 45px;
+  }
+
+  .u-section-3 .u-text-20 {
+    width: auto;
+    margin-top: 59px;
+  }
+
+  .u-section-3 .u-text-21 {
+    width: auto;
+    margin-top: 59px;
+  }
+
+  .u-section-3 .u-btn-11 {
+    margin-top: 45px;
+  }
+
+  .u-section-3 .u-container-layout-11 {
+    padding: 0 60px;
+  }
+
+  .u-section-3 .u-text-22 {
+    width: auto;
+    margin-top: 30px;
+  }
+
+  .u-section-3 .u-text-23 {
+    width: auto;
+    margin-top: 30px;
+  }
+
+  .u-section-3 .u-btn-12 {
+    margin-left: 37px;
+  }
+
+  .u-section-3 .u-btn-13 {
+    margin-right: 22px;
   }
 }
 
 @media (max-width: 575px) {
   .u-section-3 .u-text-1 {
     font-size: 1.85714rem;
-    margin-right: 43px;
   }
 
   .u-section-3 .u-slider-1 {
@@ -1119,10 +1248,6 @@
     font-size: 1.125rem;
   }
 
-  .u-section-3 .u-btn-6 {
-    margin-right: auto;
-  }
-
   .u-section-3 .u-container-layout-6 {
     padding-left: 10px;
     padding-right: 10px;
@@ -1130,10 +1255,6 @@
 
   .u-section-3 .u-text-12 {
     font-size: 1.125rem;
-  }
-
-  .u-section-3 .u-btn-7 {
-    margin-right: auto;
   }
 
   .u-section-3 .u-container-layout-7 {
@@ -1145,10 +1266,6 @@
     font-size: 1.125rem;
   }
 
-  .u-section-3 .u-btn-8 {
-    margin-right: auto;
-  }
-
   .u-section-3 .u-container-layout-8 {
     padding-left: 10px;
     padding-right: 10px;
@@ -1156,10 +1273,6 @@
 
   .u-section-3 .u-text-16 {
     font-size: 1.125rem;
-  }
-
-  .u-section-3 .u-btn-9 {
-    margin-right: auto;
   }
 
   .u-section-3 .u-container-layout-9 {
@@ -1171,8 +1284,30 @@
     font-size: 1.125rem;
   }
 
-  .u-section-3 .u-btn-10 {
-    margin-right: auto;
+  .u-section-3 .u-container-layout-10 {
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+
+  .u-section-3 .u-text-20 {
+    font-size: 1.125rem;
+  }
+
+  .u-section-3 .u-container-layout-11 {
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+
+  .u-section-3 .u-text-22 {
+    font-size: 1.125rem;
+  }
+
+  .u-section-3 .u-btn-12 {
+    margin-left: 0;
+  }
+
+  .u-section-3 .u-btn-13 {
+    margin-right: 0;
   }
 }.u-section-4 .u-blog-1 {
   margin-top: 0;
@@ -1192,6 +1327,8 @@
 .u-section-4 .u-image-1 {
   height: 304px;
   width: 386px;
+  animation-duration: 1000ms;
+  box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
   margin: 12px auto 0 1px;
 }
 
@@ -1206,6 +1343,7 @@
   height: 207px;
   background-image: url("images/logo2.jpg");
   background-position: 50% 50%;
+  box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
   margin: 39px 391px 0 auto;
 }
 
