--- a/nicepage.css
+++ b/nicepage.css
@@ -34804,7 +34804,7 @@ a.u-link.u-text-hover-grey-90:hover {
 .u-header .u-image-1 {
   width: 112px;
   height: 67px;
-  margin: 1px auto 1px 78px;
+  margin: 1px auto 1px 0;
 }
 .u-header .u-sheet-2 {
   min-height: 100px;
@@ -34813,7 +34813,6 @@ a.u-link.u-text-hover-grey-90:hover {
   .u-header .u-image-1 {
     width: 112px;
     height: 67px;
-    margin-left: 78px;
   }
 }
 
