--- a/index.css
+++ b/index.css
@@ -10,28 +10,27 @@
 }
 
 .u-section-1 .u-image-1 {
-  width: 270px;
-  height: 270px;
+  width: 350px;
+  height: 350px;
+  box-shadow: 0 2px 8px 0 rgba(128,128,128,1);
   background-image: url("images/foto-io-2.jpeg");
   background-position: 50% 50%;
   animation-duration: 1000ms;
-  box-shadow: 0 2px 8px 0 rgba(128,128,128,1);
-  margin: -251px auto 0;
+  margin: -307px auto 0;
 }
 
 .u-section-1 .u-text-1 {
   text-transform: uppercase;
   font-weight: 300;
   letter-spacing: 4px;
+  font-size: 3rem;
   width: 554px;
-  font-size: 2.25rem;
-  margin: 61px auto 0;
+  margin: 53px auto 0;
 }
 
 .u-section-1 .u-text-2 {
-  font-size: 1.14286rem;
   width: 543px;
-  margin: 52px auto 0;
+  margin: 18px auto 0;
 }
 
 .u-section-1 .u-btn-1 {
@@ -40,58 +39,23 @@
   text-transform: uppercase;
   font-weight: 700;
   letter-spacing: 2px;
-  font-size: 1.14286rem;
-  margin: 74px auto 60px;
+  margin: 77px auto 60px;
   padding: 0;
 }
 
 @media (max-width: 1199px) {
-  .u-section-1 {
-    min-height: 919px;
-  }
-
-  .u-section-1 .u-image-1 {
-    margin-top: -216px;
-  }
-
-  .u-section-1 .u-text-1 {
-    margin-top: 103px;
-  }
-
   .u-section-1 .u-text-2 {
-    margin-top: 71px;
-  }
-
-  .u-section-1 .u-btn-1 {
-    margin-top: 85px;
-    margin-bottom: 58px;
-    font-size: 1rem;
+    margin-top: 20px;
   }
 }
 
 @media (max-width: 767px) {
-  .u-section-1 .u-image-1 {
-    width: 200px;
-    height: 200px;
-  }
-
   .u-section-1 .u-text-1 {
-    width: auto;
-    margin-top: 203px;
-    margin-left: 50px;
-    margin-right: 50px;
+    width: 540px;
   }
 
   .u-section-1 .u-text-2 {
-    width: auto;
-    margin-top: 48px;
-    margin-left: 50px;
-    margin-right: 50px;
-  }
-
-  .u-section-1 .u-btn-1 {
-    font-size: 0.857143rem;
-    margin-top: 74px;
+    width: 540px;
   }
 }
 
@@ -101,29 +65,24 @@
   }
 
   .u-section-1 .u-image-1 {
-    margin-top: -180px;
+    width: 234px;
+    height: 234px;
+    margin-top: -201px;
   }
 
   .u-section-1 .u-text-1 {
-    font-size: 1.28571rem;
-    margin-top: 73px;
-    margin-left: 0;
-    margin-right: 0;
+    font-size: 1.5rem;
+    width: 340px;
+    margin-top: 54px;
   }
 
   .u-section-1 .u-text-2 {
-    font-size: 1rem;
-    margin-top: 22px;
-    margin-left: 28px;
-    margin-right: 28px;
-  }
-
-  .u-section-1 .u-btn-1 {
-    margin-top: 73px;
+    width: 340px;
+    margin-top: 25px;
   }
 }.u-section-2 {
   background-image: none;
-  min-height: 932px;
+  min-height: 989px;
 }
 
 .u-section-2 .u-shape-1 {
@@ -153,12 +112,9 @@
 }
 
 .u-section-2 .u-image-1 {
-  height: 300px;
-  width: 300px;
-  background-image: url("images/fotoio.jfif");
-  background-position: 50% 50%;
-  box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
-  margin: 47px auto 0 35px;
+  height: 474px;
+  width: 474px;
+  margin: 63px 72px 0 0;
 }
 
 .u-section-2 .u-layout-cell-2 {
@@ -172,8 +128,6 @@
 .u-section-2 .u-image-2 {
   height: 113px;
   width: 300px;
-  box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
-  animation-duration: 1000ms;
   margin: 139px auto 0 0;
 }
 
@@ -187,13 +141,13 @@
 }
 
 .u-section-2 .u-text-2 {
-  font-size: 1.14286rem;
-  margin: 139px 1px 0;
+  font-size: 1.125rem;
+  margin: 121px 2px 0 0;
 }
 
 @media (max-width: 1199px) {
   .u-section-2 {
-    min-height: 781px;
+    min-height: 838px;
   }
 
   .u-section-2 .u-layout-wrap-1 {
@@ -201,27 +155,17 @@
   }
 
   .u-section-2 .u-layout-cell-1 {
-    min-height: 736px;
+    min-height: 711px;
   }
 
   .u-section-2 .u-image-1 {
-    margin-top: 30px;
+    height: 445px;
+    width: 445px;
+    margin-right: 0;
   }
 
   .u-section-2 .u-layout-cell-2 {
-    min-height: 718px;
-  }
-
-  .u-section-2 .u-container-layout-2 {
-    padding-top: 12px;
-    padding-bottom: 12px;
-  }
-
-  .u-section-2 .u-image-2 {
-    height: 96px;
-    width: 255px;
-    margin-top: 157px;
-    margin-right: 191px;
+    min-height: 711px;
   }
 
   .u-section-2 .u-btn-1 {
@@ -229,16 +173,13 @@
   }
 
   .u-section-2 .u-text-2 {
-    width: auto;
-    margin-left: 0;
     margin-right: 0;
-    margin-bottom: -18px;
   }
 }
 
 @media (max-width: 991px) {
   .u-section-2 {
-    min-height: 170px;
+    min-height: 227px;
   }
 
   .u-section-2 .u-layout-wrap-1 {
@@ -254,7 +195,9 @@
   }
 
   .u-section-2 .u-image-1 {
+    height: 335px;
     margin-top: 35px;
+    width: 335px;
   }
 
   .u-section-2 .u-layout-cell-2 {
@@ -263,7 +206,6 @@
 
   .u-section-2 .u-image-2 {
     margin-top: 107px;
-    margin-right: 80px;
   }
 
   .u-section-2 .u-btn-1 {
@@ -271,6 +213,7 @@
   }
 
   .u-section-2 .u-text-2 {
+    width: auto;
     margin-top: 165px;
     margin-left: -385px;
   }
@@ -278,7 +221,7 @@
 
 @media (max-width: 767px) {
   .u-section-2 {
-    min-height: 270px;
+    min-height: 327px;
   }
 
   .u-section-2 .u-layout-wrap-1 {
@@ -294,34 +237,27 @@
   }
 
   .u-section-2 .u-image-1 {
-    height: 225px;
-    width: 225px;
-    margin-left: 16px;
+    height: 265px;
+    width: 265px;
+    margin-right: 275px;
   }
 
   .u-section-2 .u-layout-cell-2 {
-    min-height: 547px;
-  }
-
-  .u-section-2 .u-container-layout-2 {
-    padding-top: 0;
-    padding-bottom: 0;
+    min-height: 706px;
   }
 
   .u-section-2 .u-image-2 {
-    margin-top: -135px;
-    margin-right: 14px;
-    margin-left: auto;
+    margin-top: -57px;
   }
 
   .u-section-2 .u-btn-1 {
-    margin-top: -234px;
-    margin-right: 56px;
+    margin-top: -291px;
+    margin-right: 70px;
     margin-left: auto;
   }
 
   .u-section-2 .u-text-2 {
-    margin-top: 330px;
+    margin-top: 297px;
     margin-left: 0;
   }
 }
@@ -356,13 +292,17 @@
 
   .u-section-2 .u-image-1 {
     height: 152px;
-    width: 152px;
-    margin-top: 26px;
-    margin-left: 11px;
+    width: 170px;
+    margin-top: 25px;
+    margin-right: auto;
   }
 
   .u-section-2 .u-layout-cell-2 {
     min-height: 410px;
+  }
+
+  .u-section-2 .u-container-layout-2 {
+    padding-bottom: 0;
   }
 
   .u-section-2 .u-image-2 {
@@ -370,17 +310,18 @@
     width: 117px;
     margin-top: -222px;
     margin-right: 28px;
+    margin-left: auto;
   }
 
   .u-section-2 .u-btn-1 {
-    margin-top: 118px;
+    margin-top: 117px;
     margin-right: auto;
-    padding-right: 32px;
-    padding-left: 30px;
+    padding-right: 47px;
   }
 
   .u-section-2 .u-text-2 {
-    margin-top: 102px;
+    margin-top: 103px;
+    margin-right: -32px;
   }
 }.u-section-3 {
   background-image: none;
@@ -399,6 +340,7 @@
 .u-section-3 .u-slider-1 {
   min-height: 581px;
   width: 868px;
+  height: auto;
   margin: 51px auto 59px;
 }
 
@@ -416,8 +358,6 @@
 .u-section-3 .u-image-1 {
   width: 59px;
   height: 59px;
-  background-image: url("images/logo_small_icon_only.png");
-  background-position: 50% 50%;
   margin: 15px auto 0;
 }
 
@@ -450,11 +390,6 @@
   padding: 8px 35px 9px;
 }
 
-.u-section-3 .u-carousel-item-2 {
-  margin-top: 0;
-  margin-bottom: 0;
-}
-
 .u-section-3 .u-container-layout-2 {
   padding: 30px 80px;
 }
@@ -462,19 +397,17 @@
 .u-section-3 .u-image-2 {
   width: 59px;
   height: 59px;
-  background-image: url("images/logo_small_icon_only.png");
-  background-position: 50% 50%;
   margin: 15px auto 0;
 }
 
 .u-section-3 .u-text-4 {
   font-size: 1.25rem;
-  margin: 30px 0 0;
+  margin: 148px 0 0;
 }
 
 .u-section-3 .u-text-5 {
   font-weight: 700;
-  margin: 99px auto 0;
+  margin: 87px auto 0;
 }
 
 .u-section-3 .u-btn-3 {
@@ -485,86 +418,23 @@
   font-size: 1.07143rem;
   letter-spacing: 1px;
   box-shadow: 0px 2px 6px 0 rgba(0,0,0,0.25);
-  margin: 30px auto 0;
+  margin: 51px auto 0;
   padding: 8px 15px 9px 14px;
 }
 
 .u-section-3 .u-carousel-item-3 {
-  margin-top: 0;
-  margin-bottom: 0;
+  margin-left: 0;
+  margin-right: 92px;
 }
 
 .u-section-3 .u-container-layout-3 {
-  padding: 30px 80px;
+  padding: 30px 50px;
 }
 
-.u-section-3 .u-image-3 {
-  width: 59px;
-  height: 59px;
-  background-image: url("images/logo_small_icon_only.png");
-  background-position: 50% 50%;
-  margin: 15px auto 0;
-}
-
-.u-section-3 .u-text-6 {
-  font-size: 1.25rem;
-  margin: 88px 0 0;
-}
-
-.u-section-3 .u-text-7 {
-  font-weight: 700;
-  margin: 130px auto 0;
-}
-
-.u-section-3 .u-btn-4 {
-  background-image: linear-gradient(to right, #478ac9, #2cccc4);
-  border-style: none;
-  font-weight: 700;
-  text-transform: uppercase;
-  font-size: 1.07143rem;
-  letter-spacing: 1px;
-  box-shadow: 0px 2px 6px 0 rgba(0,0,0,0.25);
-  margin: 37px auto 0;
-  padding: 8px 15px 9px 14px;
-}
-
-.u-section-3 .u-carousel-item-4 {
-  margin-top: 0;
-  margin-bottom: 0;
-}
-
-.u-section-3 .u-container-layout-4 {
-  padding: 30px 80px;
-}
-
-.u-section-3 .u-image-4 {
-  width: 59px;
-  height: 59px;
-  background-image: url("images/logo_small_icon_only.png");
-  background-position: 50% 50%;
-  margin: 15px auto 0;
-}
-
-.u-section-3 .u-text-8 {
-  font-size: 1.25rem;
-  margin: 148px 0 0;
-}
-
-.u-section-3 .u-text-9 {
-  font-weight: 700;
-  margin: 87px auto 0;
-}
-
-.u-section-3 .u-btn-5 {
-  background-image: linear-gradient(to right, #478ac9, #2cccc4);
-  border-style: none;
-  font-weight: 700;
-  text-transform: uppercase;
-  font-size: 1.07143rem;
-  letter-spacing: 1px;
-  box-shadow: 0px 2px 6px 0 rgba(0,0,0,0.25);
-  margin: 51px auto 0;
-  padding: 8px 15px 9px 14px;
+.u-section-3 .u-icon-2 {
+  width: 64px;
+  height: 64px;
+  margin: 0 auto;
 }
 
 .u-section-3 .u-carousel-control-1 {
@@ -583,10 +453,6 @@
 }
 
 @media (max-width: 1199px) {
-  .u-section-3 .u-slider-1 {
-    height: auto;
-  }
-
   .u-section-3 .u-text-2 {
     margin-left: 0;
   }
@@ -611,25 +477,14 @@
   }
 
   .u-section-3 .u-container-layout-3 {
-    padding-left: 65px;
-    padding-right: 65px;
-  }
-
-  .u-section-3 .u-container-layout-4 {
-    padding-left: 65px;
-    padding-right: 65px;
+    padding-left: 30px;
+    padding-right: 30px;
   }
 }
 
 @media (max-width: 767px) {
   .u-section-3 .u-sheet-1 {
     min-height: 786px;
-  }
-
-  .u-section-3 .u-text-1 {
-    width: auto;
-    margin-top: 25px;
-    margin-right: 252px;
   }
 
   .u-section-3 .u-slider-1 {
@@ -669,48 +524,21 @@
   }
 
   .u-section-3 .u-container-layout-3 {
-    padding-left: 60px;
-    padding-right: 60px;
-  }
-
-  .u-section-3 .u-text-6 {
-    width: auto;
-    margin-top: 83px;
-  }
-
-  .u-section-3 .u-text-7 {
-    width: auto;
-    margin-top: 66px;
-  }
-
-  .u-section-3 .u-btn-4 {
-    margin-top: 83px;
-  }
-
-  .u-section-3 .u-container-layout-4 {
-    padding-left: 60px;
-    padding-right: 60px;
+    padding-left: 10px;
+    padding-right: 10px;
   }
 }
 
 @media (max-width: 575px) {
-  .u-section-3 .u-sheet-1 {
-    min-height: 788px;
-  }
-
   .u-section-3 .u-text-1 {
-    font-size: 1.85714rem;
-    margin-top: 47px;
-    margin-right: 138px;
-    margin-left: -86px;
+    font-size: 1.5rem;
   }
 
   .u-section-3 .u-slider-1 {
-    min-height: 566px;
-    width: 374px;
-    margin-top: 29px;
-    margin-left: -17px;
-    margin-right: -17px;
+    min-height: 559px;
+    width: auto;
+    margin-right: initial;
+    margin-left: initial;
   }
 
   .u-section-3 .u-container-layout-1 {
@@ -734,48 +562,10 @@
   .u-section-3 .u-text-4 {
     font-size: 1.125rem;
     width: auto;
-    margin-top: 52px;
-  }
-
-  .u-section-3 .u-text-5 {
-    width: auto;
-    margin-top: 47px;
-  }
-
-  .u-section-3 .u-btn-3 {
-    margin-top: 29px;
-  }
-
-  .u-section-3 .u-container-layout-3 {
-    padding-left: 10px;
-    padding-right: 10px;
-  }
-
-  .u-section-3 .u-text-6 {
-    font-size: 1.125rem;
-    margin-top: 70px;
-  }
-
-  .u-section-3 .u-text-7 {
-    margin-top: 59px;
-  }
-
-  .u-section-3 .u-btn-4 {
-    margin-top: 78px;
-  }
-
-  .u-section-3 .u-container-layout-4 {
-    padding-left: 10px;
-    padding-right: 10px;
-  }
-
-  .u-section-3 .u-text-8 {
-    font-size: 1.125rem;
-    width: auto;
     margin-top: 105px;
   }
 
-  .u-section-3 .u-text-9 {
+  .u-section-3 .u-text-5 {
     width: auto;
     margin-top: 79px;
   }
@@ -818,24 +608,13 @@
   }
 
   .u-section-4 .u-image-1 {
-    width: 65px;
-    height: 65px;
     margin-top: 86px;
     margin-left: 274px;
   }
 
-  .u-section-4 .u-image-2 {
-    width: 65px;
-    height: 65px;
-    margin-top: -65px;
-    margin-left: 431px;
-  }
-
   .u-section-4 .u-image-3 {
-    width: 81px;
-    height: 53px;
-    margin-top: -59px;
-    margin-right: 271px;
+    margin-top: -72px;
+    margin-right: 251px;
     margin-bottom: 60px;
   }
 }
@@ -857,13 +636,8 @@
     margin-left: 176px;
   }
 
-  .u-section-4 .u-image-2 {
-    margin-right: 318px;
-    margin-left: auto;
-  }
-
   .u-section-4 .u-image-3 {
-    margin-right: 166px;
+    margin-right: 153px;
   }
 }
 
@@ -879,24 +653,15 @@
   }
 
   .u-section-4 .u-image-1 {
-    width: 75px;
-    height: 67px;
-    margin-top: 74px;
+    margin-top: 79px;
+    margin-right: 102px;
     margin-left: auto;
   }
 
-  .u-section-4 .u-image-2 {
-    width: 64px;
-    height: 67px;
-    margin-top: -67px;
-    margin-left: 103px;
-  }
-
   .u-section-4 .u-image-3 {
-    width: 87px;
-    height: 57px;
-    margin-top: -62px;
-    margin-right: 71px;
+    margin-top: -78px;
+    margin-right: auto;
+    margin-left: 79px;
   }
 }
 
@@ -910,24 +675,12 @@
   }
 
   .u-section-4 .u-image-1 {
-    width: 66px;
-    height: 51px;
-    margin-top: 100px;
-    margin-left: 58px;
-  }
-
-  .u-section-4 .u-image-2 {
-    width: 51px;
-    height: 52px;
-    margin-top: -51px;
-    margin-left: auto;
+    margin-top: 95px;
     margin-right: auto;
+    margin-left: 20px;
   }
 
   .u-section-4 .u-image-3 {
-    width: 61px;
-    height: 40px;
-    margin-top: -46px;
-    margin-right: 52px;
+    margin: -72px 0 44px auto;
   }
 }
