--- a/nicepage.css
+++ b/nicepage.css
@@ -34795,24 +34795,22 @@ a.u-link.u-text-hover-grey-90:hover {
 /*end-variables sitestylecss*/
 .u-header .u-section-row-1 {
   background-image: none;
-}
-
-.u-header .u-sheet-1 {
   min-height: 69px;
 }
 
 .u-header .u-image-1 {
-  width: 112px;
+  width: calc(((100% - 1140px) / 2) + 33px);
   height: 67px;
-  margin: 1px auto 1px 0;
+  margin: 0 auto 2px 0;
 }
-.u-header .u-sheet-2 {
+.u-header .u-sheet-1 {
   min-height: 100px;
 }
 @media (max-width: 1199px) {
   .u-header .u-image-1 {
-    width: 112px;
-    height: 67px;
+    width: 103px;
+    margin-top: 1px;
+    margin-bottom: -1px;
   }
 }
 
