--- a/Giacomo-Stoffa.css
+++ b/Giacomo-Stoffa.css
@@ -16,7 +16,7 @@
   background-position: 50% 20.85%;
   animation-duration: 1000ms;
   box-shadow: 0 2px 8px 0 rgba(128,128,128,1);
-  margin: -105px auto 0;
+  margin: -118px auto 0;
 }
 
 .u-section-1 .u-text-1 {
@@ -25,7 +25,7 @@
   letter-spacing: 4px;
   width: 554px;
   font-size: 2.25rem;
-  margin: 39px auto 0;
+  margin: 52px auto 0;
 }
 
 .u-section-1 .u-text-2 {
@@ -171,7 +171,7 @@
   font-size: 3rem;
   text-shadow: 2px 2px 8px rgba(0,0,0,0.4);
   font-weight: normal;
-  margin: 0;
+  margin: 0 1px;
 }
 
 .u-section-2 .u-image-1 {
@@ -224,6 +224,11 @@
 
   .u-section-2 .u-layout-cell-1 {
     min-height: 736px;
+  }
+
+  .u-section-2 .u-text-1 {
+    margin-left: 0;
+    margin-right: 0;
   }
 
   .u-section-2 .u-image-1 {
@@ -450,7 +455,7 @@
 .u-section-3 .u-image-1 {
   width: 59px;
   height: 59px;
-  background-image: url("images/logo_small_icon_only.png?rand=53ee");
+  background-image: url("images/logo_small_icon_only.png");
   background-position: 50% 50%;
   margin: 15px auto 0;
 }
@@ -496,19 +501,19 @@
 .u-section-3 .u-image-2 {
   width: 59px;
   height: 59px;
-  background-image: url("images/logo_small_icon_only.png?rand=53ee");
+  background-image: url("images/logo_small_icon_only.png");
   background-position: 50% 50%;
   margin: 15px auto 0;
 }
 
 .u-section-3 .u-text-4 {
   font-size: 1.25rem;
-  margin: 30px 0 0;
+  margin: 88px 0 0;
 }
 
 .u-section-3 .u-text-5 {
   font-weight: 700;
-  margin: 99px auto 0;
+  margin: 130px auto 0;
 }
 
 .u-section-3 .u-btn-3 {
@@ -519,7 +524,7 @@
   font-size: 1.07143rem;
   letter-spacing: 1px;
   box-shadow: 0px 2px 6px 0 rgba(0,0,0,0.25);
-  margin: 30px auto 0;
+  margin: 37px auto 0;
   padding: 8px 15px 9px 14px;
 }
 
@@ -535,19 +540,19 @@
 .u-section-3 .u-image-3 {
   width: 59px;
   height: 59px;
-  background-image: url("images/logo_small_icon_only.png?rand=53ee");
+  background-image: url("images/logo_small_icon_only.png");
   background-position: 50% 50%;
   margin: 15px auto 0;
 }
 
 .u-section-3 .u-text-6 {
   font-size: 1.25rem;
-  margin: 88px 0 0;
+  margin: 30px 0 0;
 }
 
 .u-section-3 .u-text-7 {
   font-weight: 700;
-  margin: 130px auto 0;
+  margin: 99px auto 0;
 }
 
 .u-section-3 .u-btn-4 {
@@ -558,7 +563,7 @@
   font-size: 1.07143rem;
   letter-spacing: 1px;
   box-shadow: 0px 2px 6px 0 rgba(0,0,0,0.25);
-  margin: 37px auto 0;
+  margin: 30px auto 0;
   padding: 8px 15px 9px 14px;
 }
 
@@ -574,7 +579,7 @@
 .u-section-3 .u-image-4 {
   width: 59px;
   height: 59px;
-  background-image: url("images/logo_small_icon_only.png?rand=53ee");
+  background-image: url("images/logo_small_icon_only.png");
   background-position: 50% 50%;
   margin: 15px auto 0;
 }
@@ -608,7 +613,7 @@
 .u-section-3 .u-image-5 {
   width: 59px;
   height: 59px;
-  background-image: url("images/logo_small_icon_only.png?rand=53ee");
+  background-image: url("images/logo_small_icon_only.png");
   background-position: 50% 50%;
   margin: 15px auto 0;
 }
@@ -642,7 +647,7 @@
 .u-section-3 .u-image-6 {
   width: 59px;
   height: 59px;
-  background-image: url("images/logo_small_icon_only.png?rand=53ee");
+  background-image: url("images/logo_small_icon_only.png");
   background-position: 50% 50%;
   margin: 15px auto 0;
 }
@@ -676,7 +681,7 @@
 .u-section-3 .u-image-7 {
   width: 59px;
   height: 59px;
-  background-image: url("images/logo_small_icon_only.png?rand=53ee");
+  background-image: url("images/logo_small_icon_only.png");
   background-position: 50% 50%;
   margin: 15px auto 0;
 }
@@ -710,7 +715,7 @@
 .u-section-3 .u-image-8 {
   width: 59px;
   height: 59px;
-  background-image: url("images/logo_small_icon_only.png?rand=53ee");
+  background-image: url("images/logo_small_icon_only.png");
   background-position: 50% 50%;
   margin: 15px auto 0;
 }
@@ -744,7 +749,7 @@
 .u-section-3 .u-image-9 {
   width: 59px;
   height: 59px;
-  background-image: url("images/logo_small_icon_only.png?rand=53ee");
+  background-image: url("images/logo_small_icon_only.png");
   background-position: 50% 50%;
   margin: 15px auto 0;
 }
@@ -783,7 +788,7 @@
 .u-section-3 .u-image-10 {
   width: 59px;
   height: 59px;
-  background-image: url("images/logo_small_icon_only.png?rand=53ee");
+  background-image: url("images/logo_small_icon_only.png");
   background-position: 50% 50%;
   margin: 15px auto 0;
 }
@@ -822,7 +827,7 @@
 .u-section-3 .u-image-11 {
   width: 59px;
   height: 59px;
-  background-image: url("images/logo_small_icon_only.png?rand=53ee");
+  background-image: url("images/logo_small_icon_only.png");
   background-position: 50% 50%;
   margin: 15px auto 0;
 }
@@ -892,8 +897,14 @@
     margin-left: 0;
   }
 
+  .u-section-3 .u-text-13 {
+    width: auto;
+    margin-top: 36px;
+  }
+
   .u-section-3 .u-btn-7 {
-    margin-left: 94px;
+    margin-top: 51px;
+    margin-left: auto;
   }
 
   .u-section-3 .u-text-14 {
@@ -944,10 +955,6 @@
     padding-left: 65px;
     padding-right: 65px;
   }
-
-  .u-section-3 .u-btn-7 {
-    margin-left: 0;
-  }
 }
 
 @media (max-width: 767px) {
@@ -985,23 +992,23 @@
     padding-right: 60px;
   }
 
-  .u-section-3 .u-container-layout-3 {
-    padding-left: 60px;
-    padding-right: 60px;
-  }
-
-  .u-section-3 .u-text-6 {
+  .u-section-3 .u-text-4 {
     width: auto;
     margin-top: 83px;
   }
 
-  .u-section-3 .u-text-7 {
+  .u-section-3 .u-text-5 {
     width: auto;
     margin-top: 66px;
   }
 
-  .u-section-3 .u-btn-4 {
+  .u-section-3 .u-btn-3 {
     margin-top: 83px;
+  }
+
+  .u-section-3 .u-container-layout-3 {
+    padding-left: 60px;
+    padding-right: 60px;
   }
 
   .u-section-3 .u-container-layout-4 {
@@ -1045,13 +1052,11 @@
   }
 
   .u-section-3 .u-text-13 {
-    width: auto;
     margin-top: 59px;
   }
 
   .u-section-3 .u-btn-7 {
     margin-top: 58px;
-    margin-left: auto;
   }
 
   .u-section-3 .u-container-layout-7 {
@@ -1167,9 +1172,10 @@
   }
 
   .u-section-3 .u-slider-1 {
-    width: 340px;
-    margin-left: auto;
-    margin-right: auto;
+    height: auto;
+    width: 373px;
+    margin-left: -17px;
+    margin-right: -17px;
   }
 
   .u-section-3 .u-container-layout-1 {
@@ -1192,17 +1198,15 @@
 
   .u-section-3 .u-text-4 {
     font-size: 1.125rem;
-    width: auto;
-    margin-top: 52px;
+    margin-top: 70px;
   }
 
   .u-section-3 .u-text-5 {
-    width: auto;
-    margin-top: 47px;
+    margin-top: 59px;
   }
 
   .u-section-3 .u-btn-3 {
-    margin-top: 29px;
+    margin-top: 78px;
   }
 
   .u-section-3 .u-container-layout-3 {
@@ -1212,15 +1216,17 @@
 
   .u-section-3 .u-text-6 {
     font-size: 1.125rem;
-    margin-top: 70px;
+    width: auto;
+    margin-top: 52px;
   }
 
   .u-section-3 .u-text-7 {
-    margin-top: 59px;
+    width: auto;
+    margin-top: 47px;
   }
 
   .u-section-3 .u-btn-4 {
-    margin-top: 78px;
+    margin-top: 29px;
   }
 
   .u-section-3 .u-container-layout-4 {
@@ -1324,18 +1330,18 @@
   padding: 0 28px;
 }
 
-.u-section-4 .u-image-1 {
-  height: 304px;
-  width: 386px;
-  animation-duration: 1000ms;
-  box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
-  margin: 12px auto 0 1px;
-}
-
 .u-section-4 .u-text-1 {
   font-size: 3rem;
   text-shadow: 0 2px 8px rgba(128,128,128,1);
-  margin: -315px 231px 0 auto;
+  margin: 1px 231px 0 auto;
+}
+
+.u-section-4 .u-image-1 {
+  height: 241px;
+  width: 327px;
+  animation-duration: 1000ms;
+  box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
+  margin: 5px auto 0 18px;
 }
 
 .u-section-4 .u-image-2 {
@@ -1344,7 +1350,7 @@
   background-image: url("images/logo2.jpg");
   background-position: 50% 50%;
   box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
-  margin: 39px 391px 0 auto;
+  margin: -207px 391px 0 auto;
 }
 
 .u-section-4 .u-social-icons-1 {
@@ -1356,19 +1362,21 @@
 }
 
 @media (max-width: 1199px) {
-  .u-section-4 .u-image-1 {
-    height: 303px;
-  }
-
   .u-section-4 .u-text-1 {
     width: auto;
+    margin-top: 63px;
     margin-right: 220px;
+  }
+
+  .u-section-4 .u-image-1 {
+    height: 303px;
+    margin-top: -57px;
   }
 
   .u-section-4 .u-image-2 {
     width: 154px;
     height: 154px;
-    margin-top: 30px;
+    margin-top: -216px;
     margin-right: 283px;
   }
 
@@ -1383,21 +1391,21 @@
     margin-top: -1px;
   }
 
-  .u-section-4 .u-image-1 {
-    height: 215px;
-    width: 275px;
-    margin-top: 86px;
-    margin-left: 12px;
-  }
-
   .u-section-4 .u-text-1 {
-    margin-top: -282px;
+    margin-top: 19px;
     margin-right: auto;
     margin-left: 20px;
   }
 
+  .u-section-4 .u-image-1 {
+    height: 215px;
+    width: 275px;
+    margin-top: 21px;
+    margin-left: 12px;
+  }
+
   .u-section-4 .u-image-2 {
-    margin-top: 51px;
+    margin-top: -185px;
     margin-right: 178px;
   }
 
@@ -1413,21 +1421,21 @@
     padding-right: 10px;
   }
 
-  .u-section-4 .u-image-1 {
-    height: 216px;
-    margin-top: 60px;
-  }
-
   .u-section-4 .u-text-1 {
-    margin-top: -288px;
+    margin-top: -12px;
     margin-right: 76px;
     margin-left: auto;
+  }
+
+  .u-section-4 .u-image-1 {
+    height: 216px;
+    margin-top: 26px;
   }
 
   .u-section-4 .u-image-2 {
     width: 133px;
     height: 133px;
-    margin-top: 53px;
+    margin-top: -189px;
     margin-right: 70px;
   }
 
@@ -1443,22 +1451,23 @@
     padding-right: 0;
   }
 
+  .u-section-4 .u-text-1 {
+    font-size: 1.5rem;
+    margin-top: 13px;
+    margin-right: 10px;
+  }
+
   .u-section-4 .u-image-1 {
     height: 175px;
     width: 195px;
+    margin-top: 25px;
     margin-left: 0;
-  }
-
-  .u-section-4 .u-text-1 {
-    font-size: 1.5rem;
-    margin-top: -222px;
-    margin-right: 10px;
   }
 
   .u-section-4 .u-image-2 {
     width: 93px;
     height: 93px;
-    margin-top: 48px;
+    margin-top: -152px;
     margin-right: 27px;
   }
 
