--- a/Giacomo-Stoffa.css
+++ b/Giacomo-Stoffa.css
@@ -455,7 +455,7 @@
 .u-section-3 .u-image-1 {
   width: 59px;
   height: 59px;
-  background-image: url("images/logo_small_icon_only.png");
+  background-image: url("images/logo_small_icon_only.png?rand=53ee");
   background-position: 50% 50%;
   margin: 15px auto 0;
 }
@@ -501,7 +501,7 @@
 .u-section-3 .u-image-2 {
   width: 59px;
   height: 59px;
-  background-image: url("images/logo_small_icon_only.png");
+  background-image: url("images/logo_small_icon_only.png?rand=53ee");
   background-position: 50% 50%;
   margin: 15px auto 0;
 }
@@ -540,7 +540,7 @@
 .u-section-3 .u-image-3 {
   width: 59px;
   height: 59px;
-  background-image: url("images/logo_small_icon_only.png");
+  background-image: url("images/logo_small_icon_only.png?rand=53ee");
   background-position: 50% 50%;
   margin: 15px auto 0;
 }
@@ -579,7 +579,7 @@
 .u-section-3 .u-image-4 {
   width: 59px;
   height: 59px;
-  background-image: url("images/logo_small_icon_only.png");
+  background-image: url("images/logo_small_icon_only.png?rand=53ee");
   background-position: 50% 50%;
   margin: 15px auto 0;
 }
@@ -613,7 +613,7 @@
 .u-section-3 .u-image-5 {
   width: 59px;
   height: 59px;
-  background-image: url("images/logo_small_icon_only.png");
+  background-image: url("images/logo_small_icon_only.png?rand=53ee");
   background-position: 50% 50%;
   margin: 15px auto 0;
 }
@@ -647,7 +647,7 @@
 .u-section-3 .u-image-6 {
   width: 59px;
   height: 59px;
-  background-image: url("images/logo_small_icon_only.png");
+  background-image: url("images/logo_small_icon_only.png?rand=53ee");
   background-position: 50% 50%;
   margin: 15px auto 0;
 }
@@ -681,7 +681,7 @@
 .u-section-3 .u-image-7 {
   width: 59px;
   height: 59px;
-  background-image: url("images/logo_small_icon_only.png");
+  background-image: url("images/logo_small_icon_only.png?rand=53ee");
   background-position: 50% 50%;
   margin: 15px auto 0;
 }
@@ -715,7 +715,7 @@
 .u-section-3 .u-image-8 {
   width: 59px;
   height: 59px;
-  background-image: url("images/logo_small_icon_only.png");
+  background-image: url("images/logo_small_icon_only.png?rand=53ee");
   background-position: 50% 50%;
   margin: 15px auto 0;
 }
@@ -749,7 +749,7 @@
 .u-section-3 .u-image-9 {
   width: 59px;
   height: 59px;
-  background-image: url("images/logo_small_icon_only.png");
+  background-image: url("images/logo_small_icon_only.png?rand=53ee");
   background-position: 50% 50%;
   margin: 15px auto 0;
 }
@@ -788,7 +788,7 @@
 .u-section-3 .u-image-10 {
   width: 59px;
   height: 59px;
-  background-image: url("images/logo_small_icon_only.png");
+  background-image: url("images/logo_small_icon_only.png?rand=53ee");
   background-position: 50% 50%;
   margin: 15px auto 0;
 }
@@ -827,7 +827,7 @@
 .u-section-3 .u-image-11 {
   width: 59px;
   height: 59px;
-  background-image: url("images/logo_small_icon_only.png");
+  background-image: url("images/logo_small_icon_only.png?rand=53ee");
   background-position: 50% 50%;
   margin: 15px auto 0;
 }
@@ -1172,8 +1172,9 @@
   }
 
   .u-section-3 .u-slider-1 {
+    min-height: 601px;
     height: auto;
-    width: 373px;
+    width: 374px;
     margin-left: -17px;
     margin-right: -17px;
   }
@@ -1185,10 +1186,20 @@
 
   .u-section-3 .u-text-2 {
     font-size: 1.125rem;
+    margin-top: 17px;
+  }
+
+  .u-section-3 .u-text-3 {
+    margin-top: 101px;
   }
 
   .u-section-3 .u-btn-1 {
+    margin-top: 85px;
     margin-right: 0;
+  }
+
+  .u-section-3 .u-btn-2 {
+    margin-left: 5px;
   }
 
   .u-section-3 .u-container-layout-2 {
@@ -1217,12 +1228,12 @@
   .u-section-3 .u-text-6 {
     font-size: 1.125rem;
     width: auto;
-    margin-top: 52px;
+    margin-top: 39px;
   }
 
   .u-section-3 .u-text-7 {
     width: auto;
-    margin-top: 47px;
+    margin-top: 60px;
   }
 
   .u-section-3 .u-btn-4 {
@@ -1308,12 +1319,32 @@
     font-size: 1.125rem;
   }
 
+  .u-section-3 .u-text-23 {
+    margin-top: 15px;
+    margin-left: 31px;
+    margin-right: 31px;
+  }
+
   .u-section-3 .u-btn-12 {
+    margin-top: 68px;
     margin-left: 0;
   }
 
   .u-section-3 .u-btn-13 {
     margin-right: 0;
+  }
+
+  .u-section-3 .u-carousel-control-1 {
+    left: 0;
+    top: auto;
+    right: auto;
+    bottom: 146px;
+    position: absolute;
+  }
+
+  .u-section-3 .u-carousel-control-2 {
+    top: auto;
+    bottom: 146px;
   }
 }.u-section-4 .u-blog-1 {
   margin-top: 0;
